# gen/user.pb.validate.go
@@ -1186,7 +1186,9 @@ func (m *RegisterResponse_Data) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for ProjectId
+	// no validation rules for ClubId
+
+	// no validation rules for ClubName
 
 	// no validation rules for Message
 
